Fix clipping font in bottom sheet

--- a/src/assets/styles/scss/styles.scss
+++ b/src/assets/styles/scss/styles.scss
@@ -37,7 +37,7 @@ a { text-decoration: none; color: inherit; }
 
 /* MATERIAL DESIGN */
 .mat-raised-button, .mat-button, .mat-flat-button, .mat-stroked-button, .mat-card, 
-.mat-form-field, .mat-list-item, .mat-option { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important; }
+.mat-form-field, .mat-list-item, .mat-option, .mat-bottom-sheet-container { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important; }
 .mat-raised-button, .mat-button, .mat-flat-button, .mat-stroked-button, .mat-card { border-radius: 4px !important; }
 
 .mat-form-field-suffix {
@@ -53,6 +53,7 @@ a { text-decoration: none; color: inherit; }
 .mat-bottom-sheet-container, .mat-bottom-sheet-container-large {
     border-radius: 16px 16px 0 0 !important;
     padding: 0 !important;
+    font: inherit !important;
 }
 
 
